<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:text="@string/texto" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >


        <Button
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/orange"
            android:text="@string/boton_1" />

        <Button
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/orange"
            android:text="@string/boton_2" />

        <Button
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/orange"
            android:text="@string/boton_3" />

    </LinearLayout>

</LinearLayout>